<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="33dp"
        tools:layout_editor_absoluteY="30dp"
        android:padding="20dp">

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_data"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_name"
            android:textSize="20sp"
            android:textStyle="bold"
            android:paddingTop="10dp"/>

        <EditText
            android:id="@+id/input_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:autofillHints=""
            android:digits="@string/alphabet"
            android:maxLength="20"
            android:hint="@string/name"/>

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_surname"
            android:textSize="20sp"
            android:textStyle="bold"
            android:paddingTop="10dp"/>

        <EditText
            android:id="@+id/input_surname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:autofillHints=""
            android:digits="@string/alphabet"
            android:maxLength="20"
            android:hint="@string/surname"/>

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_address"
            android:textSize="20sp"
            android:textStyle="bold"
            android:paddingTop="10dp"/>

        <EditText
            android:id="@+id/input_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPostalAddress"
            android:autofillHints=""
            android:digits="@string/ABnum"
            android:maxLength="40"
            android:hint="@string/address"/>

        <Button
            android:id="@+id/Back"
            android:layout_width="374dp"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:onClick="Back"/>

        <Button
            android:id="@+id/Save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:onClick="Save"/>

<!--        <Button-->
<!--            android:id="@+id/button11"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/example"-->
<!--            android:onClick="Get"-->
<!--            />-->

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>